create first DirectoryWatch class